// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox rtl render component should be rendered correctly in RTL direction 1`] = `
<label
  class="ant-checkbox-wrapper ant-checkbox-rtl"
>
  <span
    class="ant-checkbox"
  >
    <input
      class="ant-checkbox-input"
      type="checkbox"
    />
    <span
      class="ant-checkbox-inner"
    />
  </span>
</label>
`;

exports[`Checkbox should support data-*、aria-* and custom attribute 1`] = `
<label
  aria-hidden="true"
  class="ant-checkbox-wrapper"
  data-text="123"
>
  <span
    class="ant-checkbox"
  >
    <input
      aria-hidden="true"
      class="ant-checkbox-input"
      data-text="123"
      type="checkbox"
      value=""
    />
    <span
      class="ant-checkbox-inner"
    />
  </span>
</label>
`;
